--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="minicircle"></div>
-    <div id="main">
+    <div id="main" data-scroll-container>
         <div id="landing">
             <div id="nav">
                 <a href="#">Vikas Kumar Singh</a>
@@ -85,6 +85,14 @@
             <h5>(forgot to mention)</h5>
             <h3>Follow on Linkedin <i class="ri-arrow-right-up-line"></i></h3>
         </div>
+        <!-- Terminal Demo Container -->
+        <!-- <div id="terminal-demo" style="margin-bottom: 100px;">
+            <div class="terminal" id="terminal-output">
+                <div class="typing">&gt; Hello World! </div>
+            </div>
+        </div> -->
+
+
         <div id="footer">
             <div id="footerleft">
                 <h5>2024 &copy</h5>
