--- a/index.html
+++ b/index.html
@@ -73,26 +73,31 @@
             </div>
         </div>
         <div id="about">
-            <img src="Images/about.jpg" alt="about">
-            <div id="textabout">
-                <h5>(About ME)</h5>
-                <p>Hello! I'm a (CSE-AIML) student. I have a strong foundation in web development and programming languages such as C and C++, which helps me bring ideas to life through technology.
-                I am passionate about solving real-world problems.Outside of my studies, I enjoy interacting with people, exploring new ideas, playing games, and unwinding with anime and movies. I believe in continuous learning.</p>
-                <a href="https://www.linkedin.com/in/VikasKSingh05" target="_blank">Let's Talk</a>
+            <div class="about-container">
+                <div class="about-left">
+                    <img src="Images/about.jpg" alt="about">
+                </div>
+                <div class="about-right">
+                    <h5>(About ME)</h5>
+                    <div class="terminal">
+                        <div class="terminal-header">
+                            <div class="terminal-buttons">
+                                <button class="terminal-button close"></button>
+                                <button class="terminal-button minimize"></button>
+                                <button class="terminal-button maximize"></button>
+                            </div>
+                            <div class="terminal-title">bash </div>
+                        </div>
+                        <div class="terminal-content" id="terminal-output">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
             <h3>Follow on Linkedin <i class="ri-arrow-right-up-line"></i></h3>
         </div>
-        <!-- Terminal Demo Container -->
-        <!-- <div id="terminal-demo" style="margin-bottom: 100px;">
-            <div class="terminal" id="terminal-output">
-                <div class="typing">&gt; Hello World! </div>
-            </div>
-        </div> -->
-
-
         <div id="footer">
             <div id="footerleft">
                 <h5>2024 &copy</h5>
@@ -101,7 +106,6 @@
                 <a href="https://github.com/VikasKSingh05" target="_blank">Github</a>
                 <a href="https://x.com/VikasKSingh05" target="_blank">X(Twiiter)</a>
                 <a href="https://leetcode.com/u/LeetVikas/" target="_blank">LeetCode</a>
-
             </div>
         </div>
     </div>
