add terminal component

--- a/index.html
+++ b/index.html
@@ -94,6 +94,60 @@
                 </div>
             </div>
         </div>
+        <div id="projects">
+            <h5>Featured Projects</h5>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>TypoTamer</h3>
+                        <p class="project-description">A modern typing practice website that helps users improve their typing speed and accuracy through interactive exercises and real-time feedback.</p>
+                        <div class="project-tech">
+                            <span>React</span>
+                            <span>JavaScript</span>
+                            <span>Tailwind CSS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">View Live <i class="ri-arrow-right-up-line"></i></a>
+                            <a href="https://github.com/VikasKSingh05/TypoTamer.git" target="_blank" class="project-link">Source Code <i class="ri-github-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>SustainaLink</h3>
+                        <p class="project-description">A comprehensive B2B food chain-supply management system that streamlines operations, reduces waste, and enhances supply chain visibility.</p>
+                        <div class="project-tech">
+                            <span>React.js</span>
+                            <span>Node.js</span>
+                            <span>Express</span>
+                            <span>MongoDB</span>
+                            <span>Google-Auth</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">View Live <i class="ri-arrow-right-up-line"></i></a>
+                            <a href="https://github.com/VikasKSingh05/SustainaLink.git" target="_blank" class="project-link">Source Code <i class="ri-github-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>PicEnhancer</h3>
+                        <p class="project-description">An ad-free, login-free image enhancement tool that provides professional-grade image processing capabilities directly in the browser.</p>
+                        <div class="project-tech">
+                            <span>React</span>
+                            <span>TailwindCSS</span>
+                            <span>APIs</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">View Live <i class="ri-arrow-right-up-line"></i></a>
+                            <a href="https://github.com/VikasKSingh05/PicEnhancer.git" target="_blank" class="project-link">Source Code <i class="ri-github-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
             <h3>Follow on Linkedin <i class="ri-arrow-right-up-line"></i></h3>
