--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="loco.css">
 </head>
 <body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="preloader-content">
+            <div class="v-shape" id="v-shape">V</div>
+            <div class="loading-text" id="loading-text">0%</div>
+        </div>
+    </div>
+    
     <div id="minicircle"></div>
     <div id="main" data-scroll-container>
         <div id="landing">
