--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vikas Portfolio</title>
+    <title>Portfolio</title>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -26,14 +26,6 @@
             <div id="nav">
                 <a href="#">Vikas Kumar Singh</a>
                  <button class="menu-btn" id="menu-btn">&#9776; VKS</button>
-                <!--<nav class="navbar" id="navbar">
-                    <ul class="navbar-menu">
-                        <li><a href="#main">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#second">Services</a></li>
-                        <li><a href="#footer">Contact</a></li>
-                    </ul>
-                </nav> -->
             </div>
             <div id="heading">
                 <div class="bounding">
@@ -53,7 +45,7 @@
                     <h5 class="boundingelem">Available for freelance</h5>
                 </div>
                 <div class="bounding">
-                    <h5 class="boundingelem">Work from 24'</h5>
+                    <h5 class="boundingelem">Work from 25'</h5>
                 </div>
             </div>
             <div id="landingfooter">
@@ -67,17 +59,17 @@
             <div class="elem">
                 <img src="Images/html.png" alt="html" >
                 <h1>HTML</h1>
-                <h5>2024</h5>
+                <h5>2025</h5>
             </div>
             <div class="elem">
                 <img src="Images/css.png" alt="css">
                 <h1>CSS</h1>
-                <h5>2024</h5>
+                <h5>2025</h5>
             </div>
             <div class="elem elemlast">
                 <img src="Images/javascript.png" alt="js">
                 <h1>JavaSript</h1>
-                <h5>2024</h5>
+                <h5>2025</h5>
             </div>
         </div>
         <div id="about">
@@ -162,7 +154,7 @@
         </div>
         <div id="footer">
             <div id="footerleft">
-                <h5>2024 &copy</h5>
+                <h5>2025 &copy</h5>
             </div>
             <div id="footerright">
                 <a href="https://github.com/VikasKSingh05" target="_blank">Github</a>
